Add figwheel and reagent

--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <p>Check the dev console</p>
+    <div id="app"></div>
     <script type="text/javascript" src="build/test/out.js"></script>
   </body>
 </html>
