Add slate layout

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="slate-theme/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="slate-theme/bootswatch.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Orion's Belt BattleGrounds</title>
   </head>
@@ -10,6 +12,9 @@
     <div id="app">
       <h2>Loading...</h2>
     </div>
+    <script src="slate-theme/jquery-1.10.2.min.js"></script>
+    <script src="slate-theme/bootstrap.min.js"></script>
+    <script src="slate-theme/bootswatch.js"></script>
     <script src="js/compiled/obb.js" type="text/javascript"></script>
   </body>
 </html>
