--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -16,5 +16,13 @@
     <script src="slate-theme/bootstrap.min.js"></script>
     <script src="slate-theme/bootswatch.js"></script>
     <script src="js/compiled/obb.js" type="text/javascript"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-56018638-1', 'auto');
+        ga('send', 'pageview');
+    </script>
   </body>
 </html>
